# awsqeapi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  app.py  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-production.txt  requirements.txt  run.py  server.sh  sitecustomize.py  start.bat  start.ps1  start.py  start.sh
docker/: daemon.json
frontend/: index.html  login.html  security.js
scripts/: account_stats.py  backup_database.sh  build-cn.bat  build-cn.sh  check_dependencies.py  check_dependencies.sh  create_session_table.sql  delete_disabled_zero_success_accounts.py  migrate_session_table.py  reset_accounts.py  retry_failed_accounts.py  verify_account_management.py
src/: __init__.py
templates/: streaming_request.json
tests/: conftest.py  test_account_binding.py  test_account_credentials_guard.py  test_account_error_handling.py  test_amazonq_model_mapping.py  test_amazonq_request.py  test_async_file_utils.py  test_auth_start_session_storage.py  test_claude_converter_boundary_merge.py  test_claude_converter_current_message_normalization.py  test_claude_converter_merge_user_messages.py  test_claude_converter_post_process_history.py  test_claude_converter_process_history.py  test_claude_images_prune.py  test_claude_model_echo_amazonq.py  test_claude_model_mapping.py  test_claude_stream_dedup_tool_use.py  test_claude_thinking_hint.py  test_claude_thinking_stream.py  test_context_compressor.py  test_distributed_lock.py  test_error_detector.py  test_imports.py  (+24 more)
(+80 files in other folders)
